--- a/tarjetas.html
+++ b/tarjetas.html
@@ -20,7 +20,7 @@
                 <div class="contenido_4">
                     <h3 class="h3_4">PASO 1</h3>
                     <P class="p_4">
-                        En el primer paso cabiaremos el grupo de trabajo para que sea posible la conexión entre dispositivos.
+                        En el primer paso camiaremos el grupo de trabajo para que sea posible la conexión entre dispositivos.
                     </P>
                     <a  class="a_4" href="paso_1.html">Ver</a>
                 </div>
